Add first integration test

--- a/tests/testsuite.html
+++ b/tests/testsuite.html
@@ -12,9 +12,10 @@
         <script src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
         <script src="../node_modules/webrtc-adapter/out/adapter.js"></script>
 
+        <script src="../node_modules/msgpack-lite/dist/msgpack.min.js"></script>
+        <script src="../node_modules/tweetnacl/nacl-fast.js"></script>
         <script src="../node_modules/saltyrtc-client/dist/saltyrtc-client.es5.js"></script>
         <script src="../node_modules/chunked-dc/dist/chunked-dc.es5.js"></script>
-        <script src="../node_modules/tweetnacl/nacl-fast.js"></script>
 
         <script src="../tests/testsuite.js"></script>
     </head>
