Switch to dependencies in @saltyrtc organization
Also tweak a bit how the type checking works.

--- a/tests/testsuite.html
+++ b/tests/testsuite.html
@@ -14,8 +14,8 @@
 
         <script src="../node_modules/msgpack-lite/dist/msgpack.min.js"></script>
         <script src="../node_modules/tweetnacl/nacl-fast.js"></script>
-        <script src="../node_modules/saltyrtc-client/dist/saltyrtc-client.es5.js"></script>
-        <script src="../node_modules/chunked-dc/dist/chunked-dc.es5.js"></script>
+        <script src="../node_modules/@saltyrtc/client/dist/saltyrtc-client.es5.js"></script>
+        <script src="../node_modules/@saltyrtc/chunked-dc/dist/chunked-dc.es5.js"></script>
 
         <script src="../tests/testsuite.js"></script>
     </head>
